--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,3 +5,6 @@
 
 // Provides a modern and reliable CSS reset
 @import "partials/_normalize";
+
+// Set typography for the whole website
+@import "partials/_typography";
