Add initial sketch for response's page

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -14,3 +14,8 @@
 
 // Set typography for the whole website
 @import "partials/_typography";
+
+// Response's pages
+// ==========================================================================
+
+@import "partials/_response_page";
