Add pop-up animation to response page's sketch

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,6 +15,11 @@
 // Set typography for the whole website
 @import "partials/_typography";
 
+// Animations
+// ==========================================================================
+
+@import "partials/animations/_popup";
+
 // Response's pages
 // ==========================================================================
 
