Add initial sketch for response's page navbar

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -24,3 +24,5 @@
 // ==========================================================================
 
 @import "partials/_response_page";
+
+@import "partials/_navbar";
