Add semi-finished homepage

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -26,7 +26,11 @@
 // Homepage
 // ==========================================================================
 
+@import "partials/_homepage";
+
 @import "partials/_action_box";
+
+@import "partials/_sidebar";
 
 // Response's pages
 // ==========================================================================
