--- a/assets/sass/partials/_typography.scss
+++ b/assets/sass/partials/_typography.scss
@@ -1,6 +1,11 @@
 // Fonts importing
 @import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@import url('https://fonts.googleapis.com/css?family=Averia+Serif+Libre:300');
 
 body {
   font-family: 'Work Sans', 'Helvetica Neue', 'Segoe UI', sans-serif;
+}
+
+.is-serif {
+  font-family: 'Averia Serif Libre', 'Noto Serif', 'Georgia', serif;
 }
