--- a/assets/sass/partials/_navbar.scss
+++ b/assets/sass/partials/_navbar.scss
@@ -12,7 +12,6 @@
   header {
     width: 100%;
     height: 60px;
-    background: rgba(24, 24, 24, 0.6);
 
     a {
       height: 100%;
@@ -41,5 +40,16 @@
 
   @media only screen and (max-width: 767px) {
     @include flex('flex-wrap', 'wrap');
+  }
+
+  // Edit the standard search bar used across the website
+  .search-bar {
+    margin-right: 20px;
+    @include flex('align-self', 'center');
+
+    @media only screen and (max-width: 767px) {
+      width: 70%;
+      margin: 0 15%; // We use percentage in order to center it
+    }
   }
 }
