--- a/assets/sass/partials/_homepage.scss
+++ b/assets/sass/partials/_homepage.scss
@@ -5,9 +5,24 @@
   @include flexbox;
   @include flex('flex-direction', 'row');
 
+  // Edit the standard navigation bar used across the website
   .navbar {
     color: #d7d7d7;
     font-family: inherit;
+
+    @media only screen and (max-width: 992px) {
+      background-color: #222; // Fallback for old browsers
+      background-color: rgba(24, 24, 24, 0.25);
+    }
+
+    header {
+      a {
+        @media only screen and (max-width: 992px) {
+          @include flex('justify-content', 'center');
+          margin: 0;
+        }
+      }
+    }
   }
 
   @media only screen and (max-width: 992px) {
