Edit bins' names

--- a/assets/sass/partials/_response_page.scss
+++ b/assets/sass/partials/_response_page.scss
@@ -45,6 +45,11 @@
   // The colors depends on the object's material
   // so we need to declare all the possible combinations.
   &.plastic {
+    background-color: #c1a71e;
+    color: #d7d7d7;
+  }
+
+  &.paper {
     background-color: #28527b;
     color: #d7d7d7;
   }
