Add initial sketch for e-mail confirmation's page

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -38,3 +38,8 @@
 @import "partials/_response_page";
 
 @import "partials/_navbar";
+
+// Confirmation's page
+// ==========================================================================
+
+@import "partials/_email_page";
