--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -759,12 +759,16 @@ body {
     align-items: center;
     color: inherit;
     text-decoration: none;
-    font-size: 20px;
     margin: 0 20px;
 }
 .navbar header a img {
     max-width: 100%;
     margin-right: 10px;
+}
+.navbar header a h1 {
+    font-size: 20px;
+    font-weight: normal;
+    display: inline;
 }
 @media only screen and (max-width: 767px) {
     .navbar header a {
