--- a/assets/sass/partials/_navbar.scss
+++ b/assets/sass/partials/_navbar.scss
@@ -22,8 +22,12 @@
       color: inherit;
       text-decoration: none;
 
-      font-size: 20px;
       margin: 0 20px;
+
+      h1 {
+        font-size: 20px;
+        font-weight: normal;
+      }
 
       img {
         max-width: 100%;
